add major api get all , update name and create
