# dtos/major.go
@@ -5,3 +5,7 @@ type Major struct {
 	ID        int    `json:"id"`
 	MajorName string `json:"major_name"`
 }
+
+type CreateMajorRequest struct {
+	MajorName string `json:"major_name" binding:"required"`
+}
